--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -20,6 +20,15 @@
     ],
     "rules": {
       "prettier/prettier": "error",
+      "import/prefer-default-export": "off",
+      "camelcase": "off",
+      "class-methods-use-this": "off",
+      "@typescript-eslint/no-unused-vars": [
+        "error",
+        {
+          "argsIgnorePattern": "_"
+        }
+      ],
       "import/extensions": [
         "error",
         "ignorePackages",
