--- a/api/package.json
+++ b/api/package.json
@@ -24,9 +24,11 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29",
+    "uuid": "^8.3.2",
     "uuidv4": "^6.2.6"
   }
 }
